Compiled for Java 17, as 1.20.3 expects.